# HermesUltraCode

./: .gitignore  LICENSE  README.md  __init__.py  config.example.json  plugin.yaml  pyproject.toml  roster.example.yaml
adapters/: hermes_hook.py  kanban_lane.py  profiles.py  wizard.py
bench/: harness.py  smoke_hermes.py  tasks.example.json
core/: catalog.py  config.py  gate.py  local_probe.py  neckbeard.py  ponytail.py  providers.py  redact.py  roster.py  router.py  routing.py  store.py  store_sqlite.py  task_tag.py  tiering.py  tighten.py  verdict.py
dashboard/: manifest.json  plugin_api.py
docs/: upstream-routing.md
ruleset/: neckbeard.md  ponytail.md
server/: __main__.py  mcp_server.py  progress.py  read_api.py  views.py
skills/neckbeard/: SKILL.md
skills/ponytail/: SKILL.md
skills/scope-first/: SKILL.md
tests/: helpers.py  test_adapter.py  test_bench.py  test_control_plane.py  test_dashboard_plugin.py  test_failclosed.py  test_gate.py  test_kanban_lane.py  test_mcp.py  test_neckbeard.py  test_plugin.py  test_ponytail.py  test_profiles.py  test_progress.py  test_provider_distinct.py  test_read_api.py  test_redact.py  test_roster.py  test_round_cap.py  test_router.py  test_routing.py  test_store.py  test_task_tag.py  test_tiering.py  test_tighten.py  test_wizard.py
web/: README.md  app.js  dashboard.html  styles.css
